# flask_test_project

./: .pre-commit-config.yaml  README.md  app.py  database.py  luckydraw.db  pyproject.toml
models/: histories.py  restaurants.py
templates/: base.html  create_restaurant.html  draw.html  edit_restaurant.html  history.html  restaurants.html  start.html
