[tool.poetry]
name = "test_flask"
version = "0.1.0"
description = ""
authors = ["berpress <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
setuptools = "^47.3.1"
pre-commit = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
